--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "airbnblike-tpexpress",
+  "name": "AirbnbLike-TpExpress",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
+    "lodash": "^4.17.4",
     "morgan": "~1.9.0",
     "nodemailer": "^4.1.3",
-    "pug": "^2.0.0-rc.4",
     "serve-favicon": "~2.4.5"
   }
 }
